# search-template

./: CMakeLists.txt  README.md
src/: main.cpp
src/search/: search.hpp
tests/: test_search.cpp
